// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InArticlePuff should render optional fields correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-ifAKCX fAFQln"
  >
    <div
      class="sc-EHOje elqBFK"
    >
      <a
        href="https://www.thetimes.co.uk"
      >
        <div
          class="sc-bdVaJa eDCunu"
        >
          <img
            src="https://via.placeholder.com/150"
          />
        </div>
      </a>
    </div>
    <div
      class="sc-bZQynM hkSfiX"
    >
      <div>
        <div
          class="sc-gzVnrw cIUyei"
        >
          interactive
        </div>
        <a
          href="https://www.thetimes.co.uk"
        >
          <h4
            class="sc-htoDjs gezxoU"
          >
            Where can I get a Covid vaccine in England?
          </h4>
        </a>
        <div
          class="sc-dnqmqq dDGXyB"
        >
          Enter your postcode to find your nearest centre
        </div>
      </div>
      <a
        class="sc-bwzfXH gpLJAb"
        href="https://www.thetimes.co.uk"
      >
        <div
          class="sc-htpNat irNLqr"
        >
          Read the full article
        </div>
        <svg
          class="iconForwardChevron"
          height="18"
          width="8"
        >
          IconForwardChevron
        </svg>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InArticlePuff should render required fields correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-ifAKCX fAFQln"
  >
    <div
      class="sc-bZQynM ejQuEv"
    >
      <div>
        <div
          class="sc-gzVnrw hmZEuU"
        >
          interactive
        </div>
        <a
          href="https://www.thetimes.co.uk"
        >
          <h4
            class="sc-htoDjs eLDtEi"
          >
            Where can I get a Covid vaccine in England?
          </h4>
        </a>
      </div>
      <a
        class="sc-bwzfXH gpLJAb"
        href="https://www.thetimes.co.uk"
      >
        <div
          class="sc-htpNat irNLqr"
        >
          Read more
        </div>
        <svg
          class="iconForwardChevron"
          height="18"
          width="8"
        >
          IconForwardChevron
        </svg>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InArticlePuff should render the initial loading state correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb egvpqE"
  >
    <div>
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;
